packages/ui/src/components/Toaster/Toaster.sass
.cui-toaster
	--cui-toaster-inset-bottom: calc(var(--cui-padding-bottom, 0.5em) + var(--cui-edge-offset-bottom) + env(safe-area-inset-bottom, 0em))
	--cui-toaster-inset-left: calc(var(--cui-padding-left, 0.5em) + var(--cui-edge-offset-left) + env(safe-area-inset-left, 0em))
	--cui-toaster-inset-right: calc(var(--cui-padding-right, 0.5em) + var(--cui-edge-offset-right) + env(safe-area-inset-right, 0em))
	--cui-toaster-inset-top: calc(var(--cui-padding-top, 0.5em) + var(--cui-edge-offset-top) + env(safe-area-inset-top, 0em))

	--cui-toaster-inset: var(--cui-toaster-inset-top) var(--cui-toaster-inset-right) var(--cui-toaster-inset-bottom) var(--cui-toaster-inset-left)

	bottom: 0
	justify-content: flex-end
	left: 0
	pointer-events: none
	position: fixed
	right: 0
	top: 0
	z-index: 51

	&,
	&-inner
		align-items: stretch
		column-gap: calc(var(--cui-gap-horizontal) * 2)
		display: flex
		flex-direction: column
		row-gap: calc(var(--cui-gap-vertical) * 2)

	&-inner
		justify-content: revert
		margin-left: auto
		margin-right: 0
		max-width: calc(460px + var(--cui-toaster-inset-left) + var(--cui-toaster-inset-right))
		padding: var(--cui-toaster-inset)
		overflow: auto
		pointer-events: auto
		width: 100%

	&-item
		isolation: isolate

